[gd_scene load_steps=7 format=3 uid="uid://bt4qlhfp1y566"]

[ext_resource type="Script" path="res://src/level_stocking_shelves/draggable_object.gd" id="1_4ll73"]

[sub_resource type="Shader" id="Shader_7pisy"]
code = "shader_type canvas_item;

uniform vec4 line_color : source_color = vec4(1.0);
uniform float line_thickness : hint_range(0, 20) = 1.0;

const vec2 OFFSETS[8] = {
	vec2(-1, -1), vec2(-1, 0), vec2(-1, 1), vec2(0, -1), vec2(0, 1),
	vec2(1, -1), vec2(1, 0), vec2(1, 1)
};

void fragment() {
	vec2 size = TEXTURE_PIXEL_SIZE * line_thickness;
	float outline = 0.0;

	for (int i = 0; i < OFFSETS.length(); i++) {
		outline += texture(TEXTURE, UV + size * OFFSETS[i]).a;
	}
	outline = min(outline, 1.0);

	vec4 color = texture(TEXTURE, UV);
	COLOR = mix(color, line_color, outline - color.a);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_blps1"]
shader = SubResource("Shader_7pisy")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 12.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1sv36"]
load_path = "res://.godot/imported/apple_crop.png-85450822e5a32d369e9bd72b455dc6b1.ctex"

[sub_resource type="CircleShape2D" id="CircleShape2D_hq71m"]
radius = 24.8818

[sub_resource type="CircleShape2D" id="CircleShape2D_dgiar"]
radius = 20.2267

[node name="Object" type="RigidBody2D"]
mass = 0.3
script = ExtResource("1_4ll73")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_blps1")
position = Vector2(-0.715925, -13.4413)
scale = Vector2(0.020095, 0.020095)
texture = SubResource("CompressedTexture2D_1sv36")

[node name="InteractionShape2D" type="Area2D" parent="Sprite"]
unique_name_in_owner = true
position = Vector2(0, 200)
scale = Vector2(20, 20)

[node name="InteractionCollisionShape2D" type="CollisionShape2D" parent="Sprite/InteractionShape2D"]
unique_name_in_owner = true
position = Vector2(4.26953, 8.5153)
shape = SubResource("CircleShape2D_hq71m")
debug_color = Color(0.662852, 0.510289, 0.148882, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(1, -6.99997)
scale = Vector2(0.4019, 0.4019)
shape = SubResource("CircleShape2D_dgiar")

[connection signal="mouse_entered" from="Sprite/InteractionShape2D" to="." method="_on_interaction_shape_2d_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/InteractionShape2D" to="." method="_on_interaction_shape_2d_mouse_exited"]
